--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -5,11 +5,10 @@ html {
 
 .page {
   padding: 0;
-  padding-top: 100px;
-  width: 100vw;
-  height: 100vh;
   display: flex;
   background-color: black;
+  width: 100vw;
+  height: 100vh;
 }
 
 .price-cards {
@@ -26,6 +25,7 @@ html {
   margin-right: 15px;
 }
 .price-card__title {
+  display: block;
   font-weight: bold;
   font-size: 35px;
   line-height: 43px;
@@ -37,6 +37,7 @@ html {
   font-size: 20px;
   line-height: 24px;
   text-align: center;
+  font-weight: normal;
 }
 .price-card__price {
   height: 104px;
