--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -16,6 +16,12 @@ html {
   display: flex;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .price-card {
   position: relative;
   width: 380px;
@@ -25,13 +31,11 @@ html {
   margin-right: 15px;
 }
 .price-card__title {
-  display: block;
   font-weight: bold;
   font-size: 35px;
   line-height: 43px;
   text-align: center;
   margin: 0;
-  margin-top: 30px;
 }
 .price-card__title-low {
   font-size: 20px;
