changed width in title container

--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -22,6 +22,18 @@ html {
   margin-top: 30px;
 }
 
+.price-card:nth-child(1) .price-card__title {
+  width: 100px;
+}
+
+.price-card:nth-child(2) .price-card__title {
+  width: 164px;
+}
+
+.price-card:nth-child(3) .price-card__title {
+  width: 176px;
+}
+
 .price-card {
   position: relative;
   width: 380px;
