--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -1,170 +1,173 @@
-* {
-    box-sizing: border-box;
-}
-
-html {
-    font-family: 'Montserrat', sans-serif;
-    color: #fff;
-}
-
-.page {
-    margin: auto;
-    padding: 0;
-    background-color: black;
-    width: 1440px;
-    height: 1000px;
-}
-
-.price-cards {
-    display: flex;
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.price-card:nth-child(1) {
-    margin: 112px 0 118px 147px;
-}
-
-.price-card:nth-child(2) {
-    margin: 112px 18px 118px 15px;
-}
-
-.price-card:nth-child(3) {
-    margin: 109px 0 121px 0px;
-}
-
-.price-card:nth-child(1) .price-card__title {
-    width: 100px;
-    height: 64px;
-}
-
-.price-card:nth-child(2) .price-card__title {
-    width: 163px;
-    height: 64px;
-}
-
-.price-card:nth-child(3) .price-card__title {
-    width: 176px;
-    height: 64px;
-}
-
-.price-card {
-    position: relative;
-    overflow: hidden;
-    width: 380px;
-    height: 770px;
-    background: #334247;
-    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.087466);
-    &__title {
-        font-weight: bold;
-        font-size: 35px;
-        line-height: 43px;
-        text-align: center;
-        margin: 0;
+    * {
+        box-sizing: border-box;
     }
-    &__title-low {
-        font-size: 20px;
-        line-height: 24px;
-        text-align: center;
-        font-weight: normal;
+    
+    html {
+        font-family: 'Montserrat', sans-serif;
+        color: #fff;
     }
-    &__price {
-        height: 104px;
+    
+    .page {
         display: flex;
-        font-weight: bold;
-        font-size: 55px;
-        line-height: 67px;
-        margin: 0;
-        margin-top: 36px;
-        /* identical to box height */
-        span {
-            margin: auto;
-        }
-    }
-    &__description {
-        margin: 0;
-        margin-top: 39px;
-        font-weight: 300;
-        font-size: 15px;
-        line-height: 18px;
-        text-align: center;
-        margin-left: 26px;
-        margin-right: 26px;
-        width: 327px;
-    }
-    &__options-list {
-        margin: 0;
-        margin-top: 42px;
-    }
-    &__option {
-        display: flex;
+        justify-content: center;
         align-items: center;
-        height: 50px;
-        img {
-            margin-left: 22px;
+        padding: 0;
+        background-color: black;
+        width: 1440px;
+        height: 1000px;
+    }
+    
+    .price-cards {
+        display: flex;
+    }
+    
+    .container {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+    
+    .price-card:nth-child(2) {
+        margin: 0px 15px 0px 15px;
+    }
+    
+    // .price-card:nth-child(1) {
+    //     margin: 112px 0 118px 147px;
+    // }
+    // .price-card:nth-child(2) {
+    //     margin: 112px 18px 118px 15px;
+    // }
+    // .price-card:nth-child(3) {
+    //     margin: 109px 0 121px 0px;
+    // }
+    .price-card:nth-child(1) .price-card__title {
+        width: 100px;
+        height: 64px;
+    }
+    
+    .price-card:nth-child(2) .price-card__title {
+        width: 163px;
+        height: 64px;
+    }
+    
+    .price-card:nth-child(3) .price-card__title {
+        width: 176px;
+        height: 64px;
+    }
+    
+    .price-card {
+        position: relative;
+        overflow: hidden;
+        width: 380px;
+        height: 770px;
+        background: #334247;
+        box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.087466);
+        &__title {
+            font-weight: bold;
+            font-size: 35px;
+            line-height: 43px;
+            text-align: center;
+            margin: 0;
         }
-        div {
-            margin-left: 21px;
+        &__title-low {
+            font-size: 20px;
+            line-height: 24px;
+            text-align: center;
+            font-weight: normal;
+        }
+        &__price {
+            height: 104px;
+            display: flex;
+            font-weight: bold;
+            font-size: 55px;
+            line-height: 67px;
+            margin: 0;
+            margin-top: 36px;
+            /* identical to box height */
+            span {
+                margin: auto;
+            }
+        }
+        &__description {
+            margin: 0;
+            margin-top: 39px;
             font-weight: 300;
             font-size: 15px;
             line-height: 18px;
+            text-align: center;
+            margin-left: 26px;
+            margin-right: 26px;
+            width: 327px;
+        }
+        &__options-list {
+            margin: 0;
+            margin-top: 42px;
+        }
+        &__option {
+            display: flex;
+            align-items: center;
+            height: 50px;
+            img {
+                margin-left: 22px;
+            }
+            div {
+                margin-left: 21px;
+                font-weight: 300;
+                font-size: 15px;
+                line-height: 18px;
+            }
+        }
+        &__option:nth-child(odd) {
+            background: #2A3438;
+            mix-blend-mode: normal;
+            opacity: 0.5;
+        }
+        &__order-btn {
+            border-radius: 20px;
+            display: block;
+            height: 40px;
+            width: 154px;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 17px;
+            /* identical to box height */
+            text-transform: uppercase;
+            border: none;
+            margin: 37px 113px 42px 112px;
+            color: #fff;
         }
     }
-    &__option:nth-child(odd) {
-        background: #2A3438;
-        mix-blend-mode: normal;
-        opacity: 0.5;
+    
+    .green {
+        background: #5BB189;
     }
-    &__order-btn {
-        border-radius: 20px;
-        display: block;
-        height: 40px;
-        width: 154px;
-        font-weight: normal;
+    
+    .blue {
+        background: #3A6BA5;
+    }
+    
+    .orange {
+        background: #EC632A;
+    }
+    
+    .popular__badge {
+        position: absolute;
+        right: -31px;
+        top: 30px;
+        font-weight: bold;
         font-size: 14px;
         line-height: 17px;
         /* identical to box height */
-        text-transform: uppercase;
-        border: none;
-        margin: 37px 113px 42px 112px;
-        color: #fff;
+        color: #FFFFFF;
+        transform: rotate(45deg);
+        background: #DC3F45;
+        width: 147px;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-}
-
-.green {
-    background: #5BB189;
-}
-
-.blue {
-    background: #3A6BA5;
-}
-
-.orange {
-    background: #EC632A;
-}
-
-.popular__badge {
-    position: absolute;
-    right: -31px;
-    top: 30px;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 17px;
-    /* identical to box height */
-    color: #FFFFFF;
-    transform: rotate(45deg);
-    background: #DC3F45;
-    width: 147px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.price-card:last-child {
-    margin-left: 0;
-}
+    
+    .price-card:last-child {
+        margin-left: 0;
+    }
