--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -129,6 +129,11 @@ html {
   color: #fff;
 }
 
+.price-card:nth-child(2) .price-card__price,
+.price-card:nth-child(3) .price-card__price {
+  margin-top: 36px;
+}
+
 .green {
   background: #5BB189;
 }
