--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -129,12 +129,13 @@
             width: 154px;
             font-weight: normal;
             font-size: 14px;
-            line-height: 17px;
+            // line-height: 17px;
             /* identical to box height */
             text-transform: uppercase;
             border: none;
             margin: 37px 113px 42px 112px;
             color: #fff;
+            padding: 0;
         }
     }
     
