--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -121,12 +121,12 @@ html {
   width: 154px;
   font-weight: normal;
   font-size: 14px;
-  line-height: 17px;
   /* identical to box height */
   text-transform: uppercase;
   border: none;
   margin: 37px 113px 42px 112px;
   color: #fff;
+  padding: 0;
 }
 
 .price-card:nth-child(2) .price-card__price,
