--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -89,8 +89,7 @@
             }
         }
         &__description {
-            margin: 0;
-            margin-top: 39px;
+            margin: 39px auto;
             font-weight: 300;
             font-size: 15px;
             line-height: 18px;
