--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -7,11 +7,8 @@ html {
   color: #fff;
 }
 
-.page {
+body {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
   background-color: black;
   width: 1440px;
   height: 1000px;
