--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -7,11 +7,8 @@
         color: #fff;
     }
     
-    .page {
+    body {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0;
         background-color: black;
         width: 1440px;
         height: 1000px;
@@ -19,6 +16,7 @@
     
     .price-cards {
         display: flex;
+        // margin: auto;
     }
     
     .container {
