--- a/price-page/styles.css
+++ b/price-page/styles.css
@@ -8,10 +8,21 @@ html {
 }
 
 body {
-  display: flex;
+  width: 100vw;
+  height: 100vh;
   background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.page {
+  padding: 0;
   width: 1440px;
   height: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .price-cards {
