--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -8,15 +8,25 @@
     }
     
     body {
-        display: flex;
+        width: 100vw;
+        height: 100vh;
         background-color: black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .page {
+        padding: 0;
         width: 1440px;
         height: 1000px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
     .price-cards {
         display: flex;
-        // margin: auto;
     }
     
     .container {
