--- a/price-page/styles/index.scss
+++ b/price-page/styles/index.scss
@@ -131,7 +131,9 @@
         }
         &__order-btn {
             border-radius: 20px;
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             height: 40px;
             width: 155px;
             font-weight: normal;
